--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
+    "autoprefixer": "^10.4.20",
     "next": "15.1.3",
     "prebid.js": "^9.25.0",
     "react": "^19.0.0",
@@ -24,8 +25,8 @@
     "@types/react-dom": "^19",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
